--- a/var/langs/en/addons/my_module.po
+++ b/var/langs/en/addons/my_module.po
@@ -15,3 +15,31 @@ msgstr "A dummy add-on for easier hook design editing"
 msgctxt "Languages::covid"
 msgid "covid"
 msgstr "Get the latest on our COVID-19 response"
+
+msgctxt "Languages::trips"
+msgid "trips"
+msgstr "Trips"
+
+msgctxt "Languages::hosts_guides"
+msgid "hosts_guides"
+msgstr "Hosts guides"
+
+msgctxt "Languages::add_boat"
+msgid "add_boat"
+msgstr "Add Boats"
+
+msgctxt "Languages::log_out"
+msgid "log_out"
+msgstr "Log out"
+
+msgctxt "Languages::services"
+msgid "services"
+msgstr "Services"
+
+msgctxt "Languages::hosts_community"
+msgid "hosts_community"
+msgstr "Hosts community"
+
+msgctxt "Languages::saved"
+msgid "saved"
+msgstr "Saved"
